--- a/templates/order_form/index.html.twig
+++ b/templates/order_form/index.html.twig
@@ -63,10 +63,12 @@
             {{ form_widget(form.funeralHomeCity, {'attr': {'class': 'appearance-none block w-full bg-gray-100 text-gray-700 border border-gray-500 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white'}}) }}
           </div>
           {# State #}
-          <div class="w-full md:w-1/3 px-3">
+          <div class="w-full md:w-1/3 px-3 relative">
             {{ form_label(form.funeralHomeState, 'State', {'label_attr': {'class': 'block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2'}} ) }}
             {{ form_widget(form.funeralHomeState, {'attr': {'class': 'appearance-none block w-full bg-gray-100 text-gray-700 border border-gray-500 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white'}}) }}
-            {# TODO: add dropdown icon #}
+            <div class="pointer-events-none absolute inset-y-0 right-0 flex items-center px-6 pt-4 text-gray-700">
+                <svg class="fill-current h-4 w-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><path d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z" /></svg>
+              </div>
           </div>
           {#  Zip #}
           <div class="w-full md:w-1/3 px-3">
@@ -157,10 +159,12 @@
               {{ form_widget(form.familyContactCity, {'attr': {'class': 'appearance-none block w-full bg-gray-100 text-gray-700 border border-gray-500 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white'}}) }}
             </div>
             {# State #}
-            <div class="w-full md:w-1/3 px-3">
+            <div class="w-full md:w-1/3 px-3 relative">
               {{ form_label(form.familyContactState, 'State', {'label_attr': {'class': 'block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2'}} ) }}
               {{ form_widget(form.familyContactState, {'attr': {'class': 'appearance-none block w-full bg-gray-100 text-gray-700 border border-gray-500 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white'}}) }}
-              {# TODO: add dropdown icon #}
+              <div class="pointer-events-none absolute inset-y-0 right-0 flex items-center px-6 pt-4 text-gray-700">
+                <svg class="fill-current h-4 w-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><path d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z" /></svg>
+              </div>
             </div>
             {#  Zip #}
             <div class="w-full md:w-1/3 px-3">
@@ -182,6 +186,117 @@
             </div>
           </div>
         </div>
+
+        {# Sympathy acknowledgements #}
+        <div>
+          <h3 class="mb-2 text-3xl sm:text-2xl md:text-3xl mt-6 text-center font-bold">Sympathy Acknowledgements
+          </h3>
+
+          {# Quantity, sentiment #}
+          <div class="flex flex-wrap">
+            {# quantity #}
+            <div class="w-full px-3 md:w-1/2 relative">
+              {{ form_label(form.symAckQuantity, 'Quantity', {'label_attr': {'class': 'block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2'}} ) }}
+              {{ form_widget(form.symAckQuantity, {'attr': {'class': 'appearance-none block w-full bg-gray-100 text-gray-700 border border-gray-500 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white'}}) }}
+              <div class="pointer-events-none absolute inset-y-0 right-0 flex items-center px-6 pt-4 text-gray-700">
+                <svg class="fill-current h-4 w-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><path d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z" /></svg>
+              </div>
+            </div>
+            {# sentiment #}
+            <div class="w-full px-3 md:w-1/2 relative">
+              {{ form_label(form.symAckSentiment, 'Sentiment', {'label_attr': {'class': 'block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2'}} ) }}
+              {{ form_widget(form.symAckSentiment, {'attr': {'class': 'appearance-none block w-full bg-gray-100 text-gray-700 border border-gray-500 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white'}}) }}
+              <div class="pointer-events-none absolute inset-y-0 right-0 flex items-center px-6 pt-4 text-gray-700">
+                <svg class="fill-current h-4 w-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><path d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z" /></svg>
+              </div>
+            </div>
+          </div>
+
+          {# font ... paper #}
+          <div class="flex flex-wrap">
+            {# font #}
+            <div class="w-full px-3 md:w-1/5 relative">
+              {{ form_label(form.symAckFont, 'Font', {'label_attr': {'class': 'block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2'}} ) }}
+              {{ form_widget(form.symAckFont, {'attr': {'class': 'appearance-none block w-full bg-gray-100 text-gray-700 border border-gray-500 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white'}}) }}
+              <div class="pointer-events-none absolute inset-y-0 right-0 flex items-center px-6 pt-4 text-gray-700">
+                <svg class="fill-current h-4 w-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><path d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z" /></svg>
+              </div>
+            </div>
+            {# font ink #}
+            <div class="w-full px-3 md:w-1/5 relative">
+              {{ form_label(form.symAckFontInk, 'Font ink', {'label_attr': {'class': 'block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2'}} ) }}
+              {{ form_widget(form.symAckFontInk, {'attr': {'class': 'appearance-none block w-full bg-gray-100 text-gray-700 border border-gray-500 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white'}}) }}
+              <div class="pointer-events-none absolute inset-y-0 right-0 flex items-center px-6 pt-4 text-gray-700">
+                <svg class="fill-current h-4 w-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><path d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z" /></svg>
+              </div>
+            </div>
+            {# Motif #}
+            <div class="w-full px-3 md:w-1/5 relative">
+              {{ form_label(form.symAckMotif, 'Motif', {'label_attr': {'class': 'block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2'}} ) }}
+              {{ form_widget(form.symAckMotif, {'attr': {'class': 'appearance-none block w-full bg-gray-100 text-gray-700 border border-gray-500 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white'}}) }}
+              <div class="pointer-events-none absolute inset-y-0 right-0 flex items-center px-6 pt-4 text-gray-700">
+                <svg class="fill-current h-4 w-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><path d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z" /></svg>
+              </div>
+            </div>
+            {# Motif Ink #}
+            <div class="w-full px-3 md:w-1/5 relative">
+              {{ form_label(form.symAckMotifInk, 'Motif Ink', {'label_attr': {'class': 'block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2'}} ) }}
+              {{ form_widget(form.symAckMotifInk, {'attr': {'class': 'appearance-none block w-full bg-gray-100 text-gray-700 border border-gray-500 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white'}}) }}
+              <div class="pointer-events-none absolute inset-y-0 right-0 flex items-center px-6 pt-4 text-gray-700">
+                <svg class="fill-current h-4 w-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><path d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z" /></svg>
+              </div>
+            </div>
+            {# Paper#}
+            <div class="w-full px-3 md:w-1/5 relative">
+              {{ form_label(form.symAckPaper, 'Paper', {'label_attr': {'class': 'block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2'}} ) }}
+              {{ form_widget(form.symAckPaper, {'attr': {'class': 'appearance-none block w-full bg-gray-100 text-gray-700 border border-gray-500 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white'}}) }}
+              <div class="pointer-events-none absolute inset-y-0 right-0 flex items-center px-6 pt-4 text-gray-700">
+                <svg class="fill-current h-4 w-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><path d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z" /></svg>
+              </div>
+            </div>
+          </div>
+
+          {# return address imprint #}
+          <div>
+            {# section heading #}
+            <label class="mt-2 px-3 block uppercase tracking-wide text-gray-500 text-xs font-bold mb-2" for="return-address-imprint">
+            Return Address imprint
+            </label>
+
+            {# street #}
+            <div class="flex">
+              <div class="w-full px-3">
+              {{ form_label(form.retAddImpStreet, 'Street', {'label_attr': {'class': 'block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2'}} ) }}
+                {{ form_widget(form.retAddImpStreet, {'attr': {'class': 'appearance-none block w-full bg-gray-100 text-gray-700 border border-gray-500 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white'}}) }}
+              </div>
+            </div>
+            {# City, State, Zip #}
+            <div class="flex flex-wrap">
+              {# City #}
+              <div class="w-full md:w-1/3 px-3">
+                {{ form_label(form.retAddImpCity, 'City', {'label_attr': {'class': 'block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2'}} ) }}
+                {{ form_widget(form.retAddImpCity, {'attr': {'class': 'appearance-none block w-full bg-gray-100 text-gray-700 border border-gray-500 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white'}}) }}
+              </div>
+              {# State #}
+              <div class="w-full md:w-1/3 px-3 relative">
+                {{ form_label(form.retAddImpState, 'State', {'label_attr': {'class': 'block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2'}} ) }}
+                {{ form_widget(form.retAddImpState, {'attr': {'class': 'appearance-none block w-full bg-gray-100 text-gray-700 border border-gray-500 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white'}}) }}
+                <div class="pointer-events-none absolute inset-y-0 right-0 flex items-center px-6 pt-4 text-gray-700">
+                  <svg class="fill-current h-4 w-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><path d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z" /></svg>
+                </div>
+              </div>
+              {#  Zip #}
+              <div class="w-full md:w-1/3 px-3">
+                {{ form_label(form.retAddImpZip, 'Zip', {'label_attr': {'class': 'block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2'}} ) }}
+                {{ form_widget(form.retAddImpZip, {'attr': {'class': 'appearance-none block w-full bg-gray-100 text-gray-700 border border-gray-500 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white'}}) }}
+              </div>
+            </div>
+
+
+          </div>
+
+        </div>
+
 
       </div>
     </div>
