--- a/templates/order_form/index.html.twig
+++ b/templates/order_form/index.html.twig
@@ -291,8 +291,43 @@
                 {{ form_widget(form.retAddImpZip, {'attr': {'class': 'appearance-none block w-full bg-gray-100 text-gray-700 border border-gray-500 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white'}}) }}
               </div>
             </div>
+          </div>
+        </div>
 
+        {# REMEMBRANCE PORTRAITS #}
+        <div>
+          <h3 class="mb-2 text-3xl sm:text-2xl md:text-3xl mt-6 text-center font-bold">Remembrance Portraits</h3>
 
+          {# Style, Size, photo #}
+          <div class="flex flex-wrap">
+            {# Style #}
+            <div class="w-full px-3 md:w-1/3 relative">
+              {{ form_label(form.remPorStyle, 'Style', {'label_attr': {'class': 'block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2'}} ) }}
+              {{ form_widget(form.remPorStyle, {'attr': {'class': 'appearance-none block w-full bg-gray-100 text-gray-700 border border-gray-500 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white'}}) }}
+              <div class="pointer-events-none absolute inset-y-0 right-0 flex items-center px-6 pt-4 text-gray-700">
+              <svg class="fill-current h-4 w-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><path d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z" /></svg>
+              </div>
+            </div>
+            {# Size #}
+            <div class="w-full px-3 md:w-1/3 relative">
+              {{ form_label(form.remPorSize, 'Size', {'label_attr': {'class': 'block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2'}} ) }}
+              {{ form_widget(form.remPorSize, {'attr': {'class': 'appearance-none block w-full bg-gray-100 text-gray-700 border border-gray-500 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white'}}) }}
+              <div class="pointer-events-none absolute inset-y-0 right-0 flex items-center px-6 pt-4 text-gray-700">
+              <svg class="fill-current h-4 w-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><path d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z" /></svg>
+              </div>
+            </div>
+            {# Photo #}
+            <div class="w-full px-3 md:w-1/3 relative">
+              {{ form_label(form.remPorPhoto, 'Photo', {'label_attr': {'class': 'block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2'}} ) }}
+              {{ form_widget(form.remPorPhoto, {'attr': {'class': 'appearance-none block w-full text-gray-700 py-2 leading-tight focus:outline-none focus:bg-white'}}) }}
+            </div>
+          </div>
+          {# Special Instructions #}
+          <div class="flex flex-wrap">
+            <div class="w-full px-3">
+              {{ form_label(form.remPorSpecialInstructions, 'Special Instructions', {'label_attr': {'class': 'block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2'}} ) }}
+              {{ form_widget(form.remPorSpecialInstructions, {'attr': {'class': 'appearance-none block w-full bg-gray-100 text-gray-700 border border-gray-500 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white'}}) }}
+            </div>
           </div>
 
         </div>
