added submitted form

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -10,7 +10,7 @@
       {% endblock %}
     </title>
     {% block stylesheets %}
-      <link rel="stylesheet" href="css/build/app.css" />
+      <link rel="stylesheet" href="/css/build/app.css" />
     {% endblock %}
   </head>
   <body>
